--- a/src/site/_includes/base.njk
+++ b/src/site/_includes/base.njk
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
     <title>{{ title }}</title>
+    {% set css %}
+      {% include "base.css" %}
+    {% endset %}
+    <style>{{ css | postcss | safe }}</style>
   </head>
   <body>
     {% include "header.njk" %}
