fix(*): Fix Lighthouse flags
Signed-off-by: Rob Sterlini <github@robsterlini.co.uk>

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -38,7 +38,7 @@
     <link rel="alternate icon" type="image/png" href="/favicon.png">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
-    {% set googleFontsUrl = "https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,600;1,400" %}
+    {% set googleFontsUrl = "https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,600;1,400?display=swap" %}
     <!-- Technique from https://csswizardry.com/2020/05/the-fastest-google-fonts/ -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" as="style" href="{{ googleFontsUrl }}" />
