--- a/src/index.njk
+++ b/src/index.njk
@@ -67,5 +67,5 @@ layout: default
   <h2>Ok, I’m on board! How can I&nbsp;help?</h2>
   <p>If you see someone tweeting or hear someone saying <em>legos</em> or <em>a lego</em> point them in this direction (kindly) so that they may understand the truths. Thank you for helping to make the world a <em>legos</em>-free&nbsp;place.</p>
 
-  <a href="{{ shareUrl }}" rel="noopener" target="_blank">Tweet your new knowledge</a> and use <a href="https://twitter.com/search?q=%23LEGOnotlegos&src=hash&f=realtime" rel="nooopener" target="_blank">#legonotlegos</a>!
+  <a href="{{ shareUrl }}" rel="noopener" target="_blank">Tweet your new knowledge</a> and use <a href="https://twitter.com/search?q=%23LEGOnotlegos&src=hash&f=realtime" rel="noopener" target="_blank">#legonotlegos</a>!
 </div>
