feat(*): Tweak colours
Signed-off-by: Rob Sterlini <github@robsterlini.co.uk>

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,6 @@
 <footer class="footer" id="footer">
   <div class="group">
     {% include "svg/good.svg" %}
-    <p><a href="/">LEGO not Legos</a> is a <abbr title="public service announcement">PSA</abbr> from <a href="https://robsterlini.co.uk">Rob Sterlini</a>, a LEGO enthusiast and fervent brand protector! He is not affiliated with <a href="https://www.lego.com/en-gb/aboutus/lego-group/">LEGO&nbsp;Group</a>, but is always down to chat about LEGO (*yes, the LEGO tattoo reference is <a href="https://www.instagram.com/p/BDTc0gYP-8b/" target="_blank" rel="noopener">real</a>).</p>
+    <p><a href="/" class="link--inherit"><strong>LEGO not Legos</strong></a> is a <abbr title="public service announcement">PSA</abbr> from <a href="https://robsterlini.co.uk">Rob Sterlini</a>, a LEGO enthusiast and fervent brand protector! He is not affiliated with <a href="https://www.lego.com/en-gb/aboutus/lego-group/">LEGO&nbsp;Group</a>, but is always down to chat all things brick-related, *and yes, the tattoo reference is&nbsp;<a href="https://www.instagram.com/p/BDTc0gYP-8b/" target="_blank" rel="noopener">real</a>.</p>
   </div>
 </footer>
