--- a/src/index.njk
+++ b/src/index.njk
@@ -59,13 +59,16 @@ layout: default
 
   <h2>Are there any&nbsp;exceptions?</h2>
   <p>Yes and no. “I have a LEGO tattoo” might be more accurately phrased as “I have a tattoo of two LEGO minifigures”, but is probably okay<a href="#footer">*</a>.</p>
-  <p>Just basically don’t do the ones above,&nbsp;right?</p>
+  <p>Just basically don’t do the ones above,&nbsp;okay?</p>
+
+  <h2>Why do you keep&nbsp;shouting?</h2>
+  <p>I’m not shouting or yelling. LEGO is one of those brand like adidas (note the lowercase “a”) that don’t use title case for their brand&nbsp;name.</a>
 
   <h2>Does it really&nbsp;matter?</h2>
   <p>Probably not, but is it not better to get it right? After all, <a href="https://twitter.com/LEGO_Group/status/842115345280294912" rel="noopener" target="_blank">LEGO themselves</a> specify that it’s always an&nbsp;adjective!</p>
 
   <h2>Ok, I’m on board! How can I&nbsp;help?</h2>
-  <p>If you see someone tweeting or hear someone saying <em>legos</em> or <em>a lego</em> point them in this direction (kindly) so that they may understand the truths. Thank you for helping to make the world a <em>legos</em>-free&nbsp;place.</p>
+  <p>If you see someone tweeting or hear someone saying <em>legos</em> or <em>a lego</em> point them in this direction (kindly) so that they may understand the truth. Thank you for helping to make the world a <em>legos</em>-free&nbsp;place.</p>
 
-  <a href="{{ shareUrl }}" rel="noopener" target="_blank">Tweet your new knowledge</a> and use <a href="https://twitter.com/search?q=%23LEGOnotlegos&src=hash&f=realtime" rel="noopener" target="_blank">#legonotlegos</a>!
+  <p><a href="{{ shareUrl }}" rel="noopener" target="_blank"><strong>Tweet your new knowledge</strong></a> and use <a href="https://twitter.com/search?q=%23LEGOnotlegos&src=hash&f=realtime" rel="noopener" target="_blank"><strong>#legonotlegos</strong></a>!</p>
 </div>
