--- a/src/_includes/scss/_footer.scss
+++ b/src/_includes/scss/_footer.scss
@@ -1,17 +1,22 @@
 .footer {
   font-size: 0.825rem;
 
+  .group {
+    padding: 2rem 0;
+  }
+
   svg {
     height: auto;
     width: 1.25rem;
   }
 
   path {
-    fill: mix(#F8B71A, $color-light, 33%);
+    fill: $lego-yellow;
+    // fill: mix(#F8B71A, $color-light, 33%);
   }
 
   circle {
-    fill: #926801;
+    // fill: #926801;
   }
 
   p {
