--- a/src/_includes/scss/_hero.scss
+++ b/src/_includes/scss/_hero.scss
@@ -7,12 +7,22 @@
 
   @media screen and (min-width: 48em) {
     padding: $header-height * 2 0 $header-height;
+    min-height: 20rem;
+  }
+
+  .group {
+    padding: 2rem 0;
   }
 
   &__heading {
     font-size: 2.5rem;
     font-weight: 400;
     text-align: center;
+    font-style: italic;
+
+    em {
+      font-weight: 600;
+    }
 
     svg {
       display: block;
