feat(header): Tweak header styling
Signed-off-by: Rob Sterlini <github@robsterlini.co.uk>

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="group">
-    <a class="header__logo link--inherit" href="/">LEGO not Legos</a>
+    <a class="header__logo link--inherit" href="/"><strong>LEGO</strong> not Legos</a>
     <a class="header__share" href="{{ shareUrl }}" rel="noopener" target="_blank">Tweet it!</a>
   </div>
 </header>
