--- a/src/_includes/scss/_examples.scss
+++ b/src/_includes/scss/_examples.scss
@@ -23,13 +23,7 @@
   }
 
   path {
-    fill: $lego-yellow;
-    // fill: #EDCE20;
-    // fill: mix($lego-red, $color-light, 25%);
-  }
-
-  circle {
-    // fill: $lego-red;
+    fill: $color-minifig;
   }
 
   &__example {
