--- a/src/_includes/scss/_footer.scss
+++ b/src/_includes/scss/_footer.scss
@@ -11,12 +11,7 @@
   }
 
   path {
-    fill: $lego-yellow;
-    // fill: mix(#F8B71A, $color-light, 33%);
-  }
-
-  circle {
-    // fill: #926801;
+    fill: $color-minifig;
   }
 
   p {
