--- a/src/index.njk
+++ b/src/index.njk
@@ -29,11 +29,11 @@ layout: default
   </div>
   <div class="why__set">
     <p class="why__question">So what is it&nbsp;then…?</p>&ensp;
-    <p class="why__answer">It’s almost always bricks and&nbsp;sets!</p>
+    <p class="why__answer">It’s almost always just bricks and&nbsp;sets!</p>
   </div>
 
   <h2>Bricks and sets?</h2>
-  <p>People most often use <em>legos</em> when they mean <em>LEGO bricks</em>, or occassionaly <em>LEGO&nbsp;sets</em>:</p>
+  <p>People most often use <em>legos</em> when they mean <em>LEGO bricks</em>, or occassionally <em>LEGO&nbsp;sets</em>:</p>
 
   <h3>Singular</h3>
   {% set examplesSingular = [examples.singularSet, examples.singularBrick] %}
