feat(base): Tweak header styles
Signed-off-by: Rob Sterlini <github@robsterlini.co.uk>

--- a/src/_includes/scss/_base.scss
+++ b/src/_includes/scss/_base.scss
@@ -123,8 +123,7 @@ p {
 }
 
 ::selection {
-  background: $lego-black;
-  color: $lego-white;
+  background: lighten($lego-red, 33.3%);
 }
 
 .sr-only {
